# s3-maven-rust-lambda

./: Cargo.toml  README.md  build.bat
src/: cfg.rs  main.rs  responses.rs  storage.rs  util.rs
src/responses/: build_response.rs  http_templates.rs
src/storage/: layers.rs
